--- a/index.html
+++ b/index.html
@@ -1,221 +1,14 @@
-/*
-Deployment URL:
-https://script.google.com/macros/s/AKfycbz1V4YupfwwD_ljtEb_DSi_jkU_Sg-stbkkqfOrLy_a5SmxFQULGyDqwpao85MBppNK/exec
-*/
-
-/* Code.gs */
-function doGet() {
-  return HtmlService.createTemplateFromFile('index')
-    .evaluate()
-    .setTitle('AI Learning Platform');
-}
-
-function submitEmail(email) {
-  if (!email) return;
-  var ss = SpreadsheetApp.openById('1Rd0iv2rw3oAYs6uz7_-JE_SjRn97vpIYOBsp5cYlTKE');
-  var sheet = ss.getSheetByName('Contacts');
-  sheet.appendRow([email, new Date()]);
-}
-
-/* index.html */
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Web App URL for copy/paste -->
-  <!-- https://script.google.com/macros/s/AKfycbz1V4YupfwwD_ljtEb_DSi_jkU_Sg-stbkkqfOrLy_a5SmxFQULGyDqwpao85MBppNK/exec -->
-  <base target="_top">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AI Learning Platform</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Orbitron:400,700&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --dark: #0A400C;
-      --mid:  #819067;
-      --light:#B1AB86;
-      --bg:  #FEFAE0;
-    }
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    html { scroll-behavior: smooth; }
-    body { font-family: 'Montserrat', sans-serif; color: var(--dark); background: var(--bg); }
-
-    nav.navbar {
-      position: fixed; top: 0; width: 100%; display: flex;
-      justify-content: space-between; align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(10,64,12,0.85);
-      backdrop-filter: blur(8px);
-      z-index: 100;
-    }
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      color: var(--bg); font-size: 1.5rem; font-weight: 700;
-    }
-    .nav-links { display: flex; list-style: none; }
-    .nav-links li { position: relative; }
-    .nav-links a {
-      color: var(--bg); text-decoration: none;
-      padding: 0.5rem 1rem; font-weight: 600;
-      transition: color 0.2s;
-    }
-    .nav-links a:hover { color: var(--light); }
-    .dropdown-content {
-      display: none; position: absolute; top: 110%; left: 0;
-      background: var(--dark); border-radius: 4px;
-      overflow: hidden;
-    }
-    .dropdown-content a {
-      display: block; padding: 0.75rem 1rem;
-      white-space: nowrap;
-    }
-    li.dropdown:hover .dropdown-content { display: block; }
-
-    .hero {
-      height: 100vh; display: flex;
-      align-items: center; justify-content: center;
-      background: linear-gradient(135deg, var(--mid), var(--light));
-      position: relative; padding: 0 1rem;
-      text-align: center;
-    }
-    .hero::after {
-      content: '';
-      position: absolute; top: 10%; left: 50%;
-      width: 300px; height: 300px;
-      background: radial-gradient(circle, rgba(255,255,255,0.2), transparent);
-      transform: translateX(-50%);
-    }
-    .hero-content {
-      position: relative; z-index: 1;
-      max-width: 600px;
-    }
-    .hero-content h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3.5rem; color: var(--bg);
-      margin-bottom: 1rem; text-transform: uppercase;
-    }
-    .hero-content p {
-      font-size: 1.25rem; color: var(--bg);
-      margin-bottom: 2rem;
-    }
-    .email-form {
-      display: flex; justify-content: center; flex-wrap: wrap;
-    }
-    .email-form input {
-      padding: 0.75rem 1rem; font-size: 1rem;
-      border: none; border-radius: 4px 0 0 4px;
-      width: 260px;
-      outline: none;
-    }
-    .email-form button {
-      padding: 0.75rem 1.5rem; font-size: 1rem;
-      border: none; border-radius: 0 4px 4px 0;
-      background: var(--dark); color: var(--bg);
-      cursor: pointer; font-weight: 600;
-      transition: background 0.2s;
-    }
-    .email-form button:hover { background: var(--light); }
-    .success-message { margin-top: 1rem; color: var(--bg); }
-
-    section { padding: 80px 20px; }
-    .content-section { max-width: 900px; margin: auto; }
-    .content-section h2 {
-      font-size: 2.25rem; margin-bottom: 1rem;
-      border-bottom: 2px solid var(--mid); display: inline-block;
-    }
-    .content-section p { font-size: 1rem; line-height: 1.6; color: #333; }
-
-    #about { background: var(--bg); }
-    #learn { background: #f5f5f5; }
-    #teams, #tools { background: var(--bg); }
-    #talent, #bootcamps { background: #f5f5f5; }
-    #blog { background: var(--bg); }
-
-    footer {
-      text-align: center; padding: 40px 0;
-      background: var(--dark); color: var(--bg);
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
-  <nav class="navbar">
-    <div class="logo">AI Learning</div>
-    <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#learn">Learn AI</a></li>
-      <li class="dropdown">
-        <a href="#partner">Partner ▼</a>
-        <div class="dropdown-content">
-          <a href="#teams">Teams Training</a>
-          <a href="#tools">Tool Partners</a>
-          <a href="#talent">Talent Partners</a>
-        </div>
-      </li>
-      <li><a href="#bootcamps">Bootcamps</a></li>
-      <li><a href="#blog">Blog</a></li>
-    </ul>
-  </nav>
-
-  <section class="hero" id="cover">
-    <div class="hero-content">
-      <h1>Next‑Gen AI Skills</h1>
-      <p>Join our AI learning platform to master the tools and techniques shaping tomorrow.</p>
-      <div class="email-form">
-        <input id="email" type="email" placeholder="Your email address">
-        <button onclick="submitForm()">Start Learning</button>
-      </div>
-      <div id="success-message" class="success-message"></div>
-    </div>
-  </section>
-
-  <section id="about" class="content-section">
-    <h2>About</h2>
-    <p>Our platform delivers bite‑sized AI lessons, hands‑on labs, and real‑world projects crafted by industry experts. Whether you're starting out or upskilling, we guide you every step of the way.</p>
-  </section>
-
-  <section id="learn" class="content-section">
-    <h2>Learn AI</h2>
-    <p>Explore curated courses on machine learning, deep learning, NLP, computer vision, and more. Get practical with interactive notebooks and live tool demos.</p>
-  </section>
-
-  <section id="teams" class="content-section">
-    <h2>Teams Training</h2>
-    <p>Upskill your group with custom workshops, private cohorts, and ongoing support to accelerate AI adoption across your organization.</p>
-  </section>
-
-  <section id="tools" class="content-section">
-    <h2>Tool Partners</h2>
-    <p>We collaborate with leading AI companies to integrate best‑in‑class platforms into our curriculum, ensuring you learn on industry‑standard tools.</p>
-  </section>
-
-  <section id="talent" class="content-section">
-    <h2>Talent Partners</h2>
-    <p>Connect with our network of AI professionals for mentorship, project collaborations, and recruitment opportunities.</p>
-  </section>
-
-  <section id="bootcamps" class="content-section">
-    <h2>Bootcamps</h2>
-    <p>Intensive, cohort‑based programs designed for rapid skill development. Engage in live sessions, peer projects, and career support.</p>
-  </section>
-
-  <section id="blog" class="content-section">
-    <h2>Blog</h2>
-    <p>Stay updated with the latest in AI research, industry insights, and platform news from our expert contributors.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 AI Learning Platform. All rights reserved.
-  </footer>
-
-  <script>
-    function submitForm() {
-      var email = document.getElementById('email').value;
-      if (!email) { alert('Please enter your email'); return; }
-      google.script.run.withSuccessHandler(function() {
-        document.getElementById('success-message').innerText = "Thank you! Check your inbox soon.";
-        document.getElementById('email').value = '';
-      }).submitEmail(email);
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbw-E4Y0mjMXg06UCcnQFDrfaa7YBC7Q6b_8FUApYXzywVohoT7kIS4ua30jwafq-pU8/exec" />
+    <script>
+      window.location.href = "https://script.google.com/macros/s/AKfycbw-E4Y0mjMXg06UCcnQFDrfaa7YBC7Q6b_8FUApYXzywVohoT7kIS4ua30jwafq-pU8/exec";
+    </script>
+  </head>
+  <body>
+    <p>If you're not redirected, <a href="https://script.google.com/macros/s/AKfycbw-E4Y0mjMXg06UCcnQFDrfaa7YBC7Q6b_8FUApYXzywVohoT7kIS4ua30jwafq-pU8/exec">click here</a>.</p>
+  </body>
 </html>
